--- a/DALib/DALib.csproj
+++ b/DALib/DALib.csproj
@@ -21,8 +21,8 @@
         <Nullable>enable</Nullable>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <TargetFramework>net9.0</TargetFramework>
-        <LangVersion>latestmajor</LangVersion>
+        <TargetFramework>net10.0</TargetFramework>
+        <LangVersion>14</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <None Include="$(MSBuildThisFileDirectory)README.md" Pack="true" PackagePath=""/>
